Kubernetes/bai-3/templates/web1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web1
  name: web1
spec:
  ports:
  - name: web1-port-bind
    port: 8081
    protocol: TCP
    targetPort: 1111
  selector:
    app: web1
  type: NodePort
status:
  loadBalancer: {}
