Kubernetes/bai-3/templates/web2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web2
  name: web2
spec:
  ports:
  - name: web2-port-bind
    port: 8082
    protocol: TCP
    targetPort: 2222
  selector:
    app: web2
  type: ClusterIP
status:
  loadBalancer: {}
