Kubernetes/bai-3/templates/ingress-nginx-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/web1"
        pathType: Prefix
        backend:
          service:
            name: web1
            port:
              number: 8011
      - path: "/web2"
        pathType: Prefix
        backend:
          service:
            name: web2
            port:
              number: 8022
